@@ -75,16 +75,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|HashSet
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|List
 import|;
 end_import
@@ -96,6 +86,16 @@ operator|.
 name|util
 operator|.
 name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|TreeSet
 import|;
 end_import
 
@@ -1448,14 +1448,14 @@ name|getMaster
 argument_list|()
 expr_stmt|;
 specifier|final
-name|HashSet
+name|TreeSet
 argument_list|<
 name|HTableDescriptor
 argument_list|>
 name|uniqueTables
 init|=
 operator|new
-name|HashSet
+name|TreeSet
 argument_list|<
 name|HTableDescriptor
 argument_list|>
